# thermo-ebms

./: .gitignore  README.md  eval.py  main.py  main_old.py  profile_flops.py  pyproject.toml  runner.py
config/: base.yaml  cifar10.yaml  conf.yaml  test.yaml
config/dataset/: celeba.yaml  cifar10.yaml  svhn.yaml
config/model/: mle_ebm.yaml  mle_kaem.yaml  thermo_ebm.yaml  thermo_kaem.yaml
config/training/: celeba.yaml  cifar10.yaml  svhn.yaml
results/: plot_compute.py  plot_run.py  plot_schedules.py
src/data/: __init__.py
src/networks/: __init__.py  base.py  ebm_fcnn.py  gen_cnn.py  mle.py  model.py  sampling.py  thermo.py
src/pipeline/: __init__.py  trainer.py
src/thermo-ebms/networks/: base.py  mle.py  thermo.py
src/thermo-ebms/pipeline/: loaders.py  trainer.py
src_old/: experiment.py
src_old/MCMC_Samplers/: grad_log_probs.py  langevin_updates.py  log_pdfs.py  sample_distributions.py
src_old/loss_computation/: loss_helper_fcns.py  losses_and_grads.py  thermo_KL.py  thermo_computation.py  vanilla_computation.py
src_old/metrics/: unbiased_metrics.py
src_old/metrics/biased_metrics/: frechet_inception_distance.py  inception_score.py  kernel_inception_distance.py
src_old/metrics/inception_network/: feature_extractor.py  inception.py  utils.py
src_old/models/: GeneratorModel.py  PriorModel.py
src_old/pipeline/: generate.py  initialise.py  pipeline_steps.py  update_steps.py
src_old/utils/: helper_functions.py
tests/: test_base.py  test_boilerplate.py  test_distributed.py  test_kaem.py  test_kan.py  test_mcmc.py  test_metrics.py  test_mle.py  test_thermo.py  test_trainer.py  test_trainsteps.py  test_ula.py  utils.py
thermo_ebms/: __init__.py
thermo_ebms/config/: __init__.py  kan.py  model.py  networks.py  pipeline.py  types.py
thermo_ebms/models/: __init__.py  base.py  ebm_dense.py  gen_cnn.py  kaem.py  kan.py  mle.py  sampling.py  thermo.py
thermo_ebms/networks/: __init__.py  base.py  ebm_fcnn.py  gen_cnn.py  mle.py  sampling.py  thermo.py
thermo_ebms/pipeline/: __init__.py  jit.py  loaders.py  metrics.py  opt.py  trainer.py
