[project]
name = "jax-thermoebm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.7",
    "grain>=0.2.17",
    "importlib-resources>=7.1.0",
    "jax[cuda12]>=0.10.1",
    "ml-collections>=1.1.0",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "optax>=0.2.8",
    "pyyaml>=6.0.3",
    "tensorflow>=2.21.0",
    "tensorflow-datasets>=4.9.10",
]

[project.optional-dependencies]
pytest = [
    "matplotlib>=3.10.9",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py312"
include = ["*.py", "*.pyi", "*.ipynb"]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
extend-select = ["UP"] 
# ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false

