[project]
name = "thermo-ebms"
version = "0.1.0"
description = "Unsupervised latent-space EBMs with Thermodynamic Integration training"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Prithvi Raj"}
]
dependencies = [
    "blackjax>=1.5",
    "flax>=0.12.7",
    "grain>=0.2.17",
    "importlib-resources>=7.1.0",
    "jax[cuda12]>=0.10.1",
    "numpy>=2.4.6",
    "ml-collections>=1.1.0",
]

[project.optional-dependencies]
train = [
    "clu>=0.0.12",
    "orbax-checkpoint>=0.12.0",
    "tensorflow>=2.21.0",
    "tensorflow-datasets>=4.9.10",
    "opencv-python-headless>=4.13.0.92",
    "optax>=0.2.8",
    "pyyaml>=6.0.3",
    "h5py",
]

eval = [
    "h5py",
    "scikit-learn>=1.9.0",
    "torch-fidelity>=0.4.0",
    "pillow>=12.2.0",
]

dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
    "matplotlib>=3.10.9",
]

[tool.ruff]
line-length = 88
target-version = "py312"
include = ["*.py", "*.pyi", "*.ipynb"]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
extend-select = ["UP"] 
# ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools.packages.find]
include = ["thermo_ebms"]
